Security: Remove config.js from tracking and improve .gitignore
- Remove public/js/config.js from git tracking to protect API keys
- Enhanced .gitignore with better patterns for config files
- Added exclusions for sensitive data files
- Config.example.js files remain for setup reference

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,20 @@
 .env
 .env.local
 .env.production
+.env.development
+.env.*.local
 
-# Configuration files with API keys
+# Configuration files with API keys - exclude from git
 js/config.js
 public/js/config.js
+**/config.js
+!**/config.example.js
+
+# Any files containing sensitive data
+**/secret*
+**/private*
+**/*secret*
+**/*private*
 
 # Build outputs
 dist/
