Revert "Security: Remove config.js from tracking and improve .gitignore"
This reverts commit c3d8135c0c081360f03fc1c53cf22f26f778b5e2.

--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,10 @@
 .env
 .env.local
 .env.production
-.env.development
-.env.*.local
 
-# Configuration files with API keys - exclude from git
+# Configuration files with API keys
 js/config.js
 public/js/config.js
-**/config.js
-!**/config.example.js
-
-# Any files containing sensitive data
-**/secret*
-**/private*
-**/*secret*
-**/*private*
 
 # Build outputs
 dist/
